--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,10 @@
     sans-serif;
 }
 
+.cshadow {
+  box-shadow: 0 0 1px 0 rgb(0 0 0 / 10%)
+}
+
 .nowrap .v-select__selections {
   flex-wrap: nowrap;
 }
