--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,28 @@
     sans-serif;
 }
 
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
 .cshadow {
-  box-shadow: 0 0 1px 0 rgb(0 0 0 / 10%)
+  box-shadow: 0 0 10px 0 rgb(0 0 0 / 15%)
 }
 
 .nowrap .v-select__selections {
@@ -80,4 +100,17 @@
   100% {
     transform: scale(0);
   }
+}
+
+.no_selection {
+  user-select: none;
+  /* standard syntax */
+  -webkit-user-select: none;
+  /* webkit (safari, chrome) browsers */
+  -moz-user-select: none;
+  /* mozilla browsers */
+  -khtml-user-select: none;
+  /* webkit (konqueror) browsers */
+  -ms-user-select: none;
+  /* IE10+ */
 }
